5.1.0~beta8 (2015-04-07)
UPD: YouTube relevant description links - improved performance resolving urls with caching

5.1.0~beta7 (2015-04-06)
FIX: solved blank items of extracted YouTube relevant links
UPD: improved YouTube relevant link extraction

5.1.0~beta6 (2015-04-05)
UPD: create videos and playlists (if possible) from certain links
FIX: script error while resolving url fails
FIX: script error while adding video to a playlist

5.1.0~beta5 (2015-04-03)
ADD: 'More Links from the description' - extracts furthur links from the description

5.1.0~beta4 (2015-03-31)
UPD: French (thx 2 eauland)

5.1.0~beta3 (2015-03-25)
UPD: regex optimizations for season and expisode extraction
UPD: kodion 1.2.0 tests (regex optimizations)

5.1.0~beta2 (2015-03-24)
UPD: kodion 1.2.0 tests

5.1.0~beta1 (2015-03-23)
ADD: Korean (thx 2 piodio)
FIX: show seconds (runtime) in Gotham

5.0.9 (2015-03-14)
ADD: 'duration' optimized for KODI 15.X (Isengard)
ADD: EndPoint for listing the videos of a playlist: "plugin://plugin.video.youtube/playlist/<PLAYLIST_ID>/"
UPD: optimized client-/server transfer (use gzip)

5.0.8 (2015-03-05)
UPD: Polish (thx 2 Etharr)
UPD: Russian (thx 2 BytEvil)
FIX: improved playback

5.0.7 (2015-02-27)
ADD: 'Refresh' in 'My Subscriptions' and all my playlists
ADD: rename search history item
UPD: French (thx 2 Trilip)
UPD: Ukrainian (thx 2 posledov)
UPD: Spanish (thx 2 PatOso)
FIX: possible crash on not well formed language ids
FIX: optimized logging
FIX: unicode trouble

5.0.6 (2015-02-17)
ADD: setting for hiding the channel name in the description
ADD: Ukrainian (thx 2 posledov)
UPD: show 'Watch History' (default)
UPD: Russian (thx 2 BytEvil)
UPD: improved support for live streams
UPD: improved stream selection based on container
FIX: 'What to watch' => 'Popular right now'
FIX: don't crash while trying to play rtmpe
FIX: corrected ITAG 18 in 360p instead of 260p


5.0.5 (2015-02-01)
ADD: clear search history items
UPD: replace context menu not everywhere