@@ -10,17 +10,34 @@ import unittest
 
 
 class TestUrlExtract(unittest.TestCase):
+    def test_resolve_urls(self):
+        context = kodion.Context()
+        resolver = UrlResolver(context)
+        resolver.clear()
+
+        # lefloid
+        url = 'http://www.youtube.com/lefloid'
+        resolved_url = resolver.resolve(url)
+        self.assertEquals('https://www.youtube.com/channel/UCLm6s42r_wCbBX0QqXNCTwg', resolved_url)
+
+        # nerdist
+        url = 'http://nerdi.st/subscribe'
+        resolved_url = resolver.resolve(url)
+        self.assertEquals('https://www.youtube.com/channel/UCTAgbu2l6_rBKdbTvEodEDw', resolved_url)
+        pass
+
     def test_urls(self):
         urls = [
+            ('https://youtu.be/GdhfwW5zHEY', 'https://www.youtube.com/watch?v=GdhfwW5zHEY&feature=youtu.be'),
             ('https://www.youtube.com/redirect?q=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D9DKZbZyW2-g%26list%3DPL3tRBEVW0hiAOf_drlpS1hqZjJknW88cB%26index%3D1&redir_token=IBH7ovJdGv031f2JRlnYAKfq0m98MTQyODE1NjI2MEAxNDI4MDY5ODYw', 'http://www.youtube.com/watch?v=9DKZbZyW2-g&list=PL3tRBEVW0hiAOf_drlpS1hqZjJknW88cB&index=1'),
             ('http://smo.sh/SubscribeSmoshGames', 'https://www.youtube.com/channel/UCJ2ZDzMRgSrxmwphstrm8Ww?sub_confirmation=1'),
-            ('https://youtu.be/GdhfwW5zHEY', 'https://www.youtube.com/watch?v=GdhfwW5zHEY&feature=youtu.be'),
             ('http://ow.ly/LcFu4', 'http://www.heise.de/'),
             ('http://goo.gl/CRiy4L', 'http://www.shortnews.de')
         ]
 
         context = kodion.Context()
         resolver = UrlResolver(context)
+        resolver.clear()
         for url in urls:
             resolved_url = resolver.resolve(url[0])
             self.assertEquals(resolved_url, url[1])
